# plamtral

./: README.md  setup.cfg
src/: tl_train.py
src/data/: dataset.py
src/fine_tuning/: BitFit.py  ULMFiT.py  chain_thaw.py  stlr.py  utils.py  vanilla_fine_tuning.py
src/lib/: evaluate.py  select_model.py  utils.py
src/parameter_efficient/: adapter.py  adapter_bapna.py  adapterdrop.py  lora.py  mam_adapter.py  masking.py  parallel_adapter.py  prefix_tuning.py  prompt_tuning.py
src/plamtral.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tl_lib/: TransferLearningToolkit.ipynb  select_model.py  tl_train.py  utils.py
