[metadata]
name = plamtral
version = 0.0.1
author = Vibhu
author_email = vibhud04@gmail.com
description = A transfer learning library for pre-trained language models.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Vibhu04/plamtral
project_urls =
    Bug Tracker = https://github.com/Vibhu04/plamtral/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    nltk
    torch
    torchmetrics
    tqdm
    transformers
[options.packages.find]
where=src